# School-WMC-05

client/: angular.json  package-lock.json  package.json
client/src/: styles.scss
client/src/app/: app-routing.module.ts  app.module.ts
client/src/app/_components/home/: home.component.html  home.component.scss
client/src/app/_components/products/: products.component.html  products.component.ts
client/src/app/_components/quadratic/: quadratic.component.html  quadratic.component.scss  quadratic.component.spec.ts  quadratic.component.ts
server/: Cargo.toml
server/src/: main.rs
