[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.33.0", features = ["full"]}
tower = "0.4.13"
axum = "0.6.20"
serde = {version = "1.0.192", features = ["derive"]}
serde_json = "1.0.108"
clap = {version = "4.4.7", features = ["derive"]}
clap-num = "1.0.2"
tower-http = {version = "0.4.4", features = ["full"]}